# vscode-multiple-root-testing

gtest/: CMakeLists.txt  test.cpp
other/: CMakeLists.txt  main.cpp
